--- a/01_search_and_vector_search.ipynb
+++ b/01_search_and_vector_search.ipynb
@@ -285,6 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "def get_embeddings(content: str, mode: str, input_type: str) -> List[float]:\n",
     "    # 입력이 이미지인 경우, 먼저 이미지 콘텐츠를 로드합니다.\n",
     "    if mode == \"image\":\n",
